@@ -95,6 +95,16 @@
   <launchable type="desktop-id">@app_id@.desktop</launchable>
   <content_rating type="oars-1.1" />
   <releases>
+    <release version="50~alpha" date="2026-01-03" type="development">
+      <description>
+        <ul>
+          <li>Updated translations</li>
+          <li>Improved metainfo !451 (Maximiliano)</li>
+          <li>Improved build process !448 (Chris Mayo)</li>
+          <li>Fix cropped buttons section #519 (Adrien Plazas)</li>
+        </ul>
+      </description>
+    </release>
     <release version="49.1.1" date="2025-10-21" type="stable">
       <description>
         <ul>
