@@ -1,3 +1,9 @@
+Overview of changes in gnome-calculator 50.alpha
+    * Updated translations
+    * Improved metainfo !451 (Maximiliano)
+    * Improved build process !448 (Chris Mayo)
+    * Fix cropped buttons section #519 (Adrien Plazas)
+
 Overview of changes in gnome-calculator 49.1.1
     * Updated translations
     * Fixed variable usage with text-operators in function definition #504 (Robert Roth)
